Added an icon to the main page for checking the whole BIND configuration including zone files, with the named-checkconf command.
Added a Module Config option to prevent inclusion of other slave's IP addresses in the master IP list for remote slaves.
---- Changes since 1.450 ----
Fixed the 'Directory for DNSSEC keys' option on the Module Config page so that it is actually used.
SPF records longer than 255 bytes are automatically split into separate fields in the underlying TXT record.
---- Changes since 1.460 ----
When adding a master zone with automatically created slaves, add an also-notify block to the master configuration to update the slaves.
---- Changes since 1.470 ----
Added mass record change and creation buttons to the zone search results page.
Made the manual config file editor textboxes full-width.
Fixed a bug that cause blocks like sortlist not be parsed properly, and possible cause Webmin to corrupt other parts of the named.conf file.
Redirect and explanation modifiers can be viewed and edited in SPF records.
Added a Module Config option for additional master IP addresses for remote slave zones.
If nscd is running when BIND is restarted or a zone is applied, it will be signalled to re-read DNS caches too.
---- Changes since 1.480 ----
When all DNS records in a zone are shown, the Type column can be clicked on to sort them.
---- Changes since 1.490 ----
Root zone records files are now included in Webmin backups.
---- Changes since 1.500 ----
Added new NSEC3 algorithms for DNSSEC.
Changed the default DNSSEC algorithm from DSA to the stronger RSASHA1.
---- Changes since 1.510 ----
On Linux systems, /dev/urandom is used for generating entropy for DNSSEC.
---- Changes since 1.520 ----
Added the Delete Records In Selected button to the main page, for removing the same record in multiple domains at once.
---- Changes since 1.530 ----
The default view for new zones can now be set via an option on the Module Config page.